@@ -107,10 +107,13 @@ public class PayPalManager implements PaymentProvider, RefundRequest, PaymentInf
         String publicIdentifier = spec.getPurchaseContext().getPublicIdentifier();
 
         String baseUrl = StringUtils.removeEnd(configurationManager.getFor(ConfigurationKeys.BASE_URL, spec.getPurchaseContext().getConfigurationLevel()).getRequiredValue(), "/");
-        String bookUrl = baseUrl + "/" + purchaseContextType + "/" + publicIdentifier + "/reservation/" + spec.getReservationId() + "/payment/paypal/" + URL_PLACEHOLDER;
+        String bookUrl = baseUrl + "/payment/paypal/redirect/" + URL_PLACEHOLDER;
 
         String hmac = computeHMAC(spec.getCustomerName(), spec.getEmail(), spec.getBillingAddress(), spec.getPurchaseContext());
         UriComponentsBuilder bookUrlBuilder = UriComponentsBuilder.fromUriString(bookUrl)
+            .queryParam("purchaseContextType", purchaseContextType)
+            .queryParam("purchaseContextIdentifier", publicIdentifier)
+            .queryParam("reservationId", spec.getReservationId())
             .queryParam("hmac", hmac);
         String finalUrl = bookUrlBuilder.toUriString();
 
@@ -234,7 +237,8 @@ public class PayPalManager implements PaymentProvider, RefundRequest, PaymentInf
                     var order = orderResponse.result();
                     var payments = order.purchaseUnits().stream()
                         .map(PurchaseUnit::payments)
-                        .collect(Collectors.toList());
+                        .filter(Objects::nonNull)
+                        .toList();
 
                     var refund = payments.stream().flatMap(p -> emptyIfNull(p.refunds()).stream())
                         .map(r -> new BigDecimal(r.amount().value()))
